# trabalho-final-trabalho_final_loxcpp

./: .gitignore  CMakeLists.txt  Escopo.md  README.md  mkdocs.yml  setup_tests.sh
.github/workflows/: deploy.yml
exemplos/: 01_hello_world.lox  02_variables.lox  03_control_flow.lox  04_fibonacci.lox  05_scope.lox
src/: CMakeLists.txt  Callable.hpp  Environment.cpp  Environment.hpp  Interpreter.cpp  Interpreter.hpp  Parser.cpp  Parser.hpp  RuntimeError.hpp  Scanner.cpp  Scanner.hpp  Token.cpp  Token.hpp  Value.cpp  Value.hpp  main.cpp
src/ast/: ASTPrinter.cpp  ASTPrinter.hpp  Expr.hpp  Stmt.hpp  Visitor.hpp
tests/: CMakeLists.txt  InterpreterTests.cpp  ParserTests.cpp  ScannerTests.cpp
